--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding.enabled = true
 }
 
 dependencies {
@@ -39,6 +40,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.1'
 
@@ -54,10 +56,15 @@ dependencies {
     androidTestImplementation "org.koin:koin-test:$koin_version"
 
     // Room
-    def room_version = "2.2.3"
+    def room_version = "2.2.5"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Groupie
+    def groupie_version = "2.7.2"
+    implementation "com.xwray:groupie:$groupie_version"
+    implementation "com.xwray:groupie-databinding:$groupie_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
