--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation 'junit:junit:4.13'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.4.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
