--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'deploygate'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
