--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,16 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // Deploygate
+        classpath 'com.deploygate:gradle:2.1.0'
     }
 }
 
@@ -19,7 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
